tests/compilation_error/return_in_void_function.ll
def void():
    return 5
